--- a/4. Express_JS/Serving HTML CSS and JS (views, util, style, routes)/views/success.html
+++ b/4. Express_JS/Serving HTML CSS and JS (views, util, style, routes)/views/success.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
     </header>
-    <h1 style="color: blue;">Form successfuly filled</h1>
+    <h1 style="color: blue; text-align: center;">Form successfuly filled</h1>
 </body>
 
 </html>
