--- a/4. Express_JS/Dynamic Routes/views/admin/edit-product.ejs
+++ b/4. Express_JS/Dynamic Routes/views/admin/edit-product.ejs
@@ -30,12 +30,13 @@
                             rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
                     </div>
                     <% if (editing) {%>
-                        <input type="hidden" value="<%= product.id %>">
+                        <input type="hidden" value="<%= product.id %>" name="productId">
                         <% } %>
 
-                            <button class="btn" type="submit" name="producId">
-                                <% if(editing) { %>Update Product <% } else { %> Add Product<% }%>
+                            <button class="btn" type="submit">
+                                <% if (editing) { %>Update Product<% } else { %>Add Product<% } %>
                             </button>
+                </form>
                 </form>
             </main>
             <%- include('../includes/end.ejs') %>
